@@ -1,19 +1,19 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-AUX pidof-bsd-20050501-darwin.patch 5236 RMD160 80984c308ffec6cfa5edf2dc225f544b70299f7f SHA1 39d2f14a725ed0b888e99adfa8b718dc0c7784fa SHA256 b394acbdac5414e86e26e9ebaaa87ac379d503716c03dfdf1c017ec47643e848
+AUX pidof-bsd-20050501-darwin.patch 5240 RMD160 828d5a63d570819078b57c38416492b5568dd39e SHA1 c4176228b587e878eb652ab2dfeda6e60c7a13c4 SHA256 fc69b36e6adf02a8efb2e19ee7016ae4d5639516c44ed79922a4c0da53df52a9
 AUX pidof-bsd-20050501-firstarg.patch 485 RMD160 5959417c6ac48e808cf77d27bc4b91690c7d8523 SHA1 a194e8c0c4d702e796a7440ef07dde23f27e77dd SHA256 40bc0e215cce2b963c949bc84ac615970d10dd5f6e820a2bb826b5307ee9aee3
 AUX pidof-bsd-20050501-gfbsd.patch 2898 RMD160 e62fa1d1c714014b51be61b95e2e599c92ec1622 SHA1 6afdce1e965a57b4cc8b28f09658ae5687974540 SHA256 333984dcdfe27db0478e168366ee31449e5b457764530a840908890d31a688eb
-AUX pidof-bsd-20050501-netbsd.patch 1609 RMD160 b0a5d572a98130bfa4f4f9169995d3c6617d5e0d SHA1 a0e03b99755491c06f1d9998084f2f2bde6220d8 SHA256 8ee55747a74e5f2ece266a988d539b67cfcbfc08d6b3df60e65421a1f43f8193
+AUX pidof-bsd-20050501-netbsd.patch 1611 RMD160 908ffb23ae64e6c625d5e1c39c88ef19efaa53eb SHA1 03388edfb780c974b0d9ec64d59daf208bd86148 SHA256 d3480f96c28779ec821bcf8b59ef63db483e66083665fb879be9af7fdcc807af
 AUX pidof-bsd-20050501-pname.patch 1374 RMD160 48fa60d17fd607cd9ca284939d74f6db995fa7df SHA1 5d58351d06f842cc52a0cad452fba9729a93c0e1 SHA256 04fdaa9de91dafa6fc1e12443e30ec532315f74cfdffcf074fd5d8583ec322fe
 DIST pidof-bsd-20050501.tar.gz 1769 RMD160 1306e7f4b2d6231358d10b45705a16c925bb1d51 SHA1 408cf9d2ff486acb8e90de4fdec138554fd71868 SHA256 c3ed8826178debe872f7717b8810d477d4611ab19af73bed97c5af1c552d20e6
-EBUILD pidof-bsd-20050501-r4.ebuild 1053 RMD160 2f50eed8062933e64770050317bcf4ce7ad8b3ff SHA1 811913946d09910e71d22051fa405082a60092d1 SHA256 8165018fdba39e23e406ed432accb40ffebd9462929a6cb5eef7a333578375f6
-MISC ChangeLog 1902 RMD160 8d264fd93a8f9f6f18529dce90b1818cd236df7e SHA1 c4f424e9414d5cea0d313cf8439305b692ad0545 SHA256 f5cf49b1ada8d7dd30d7041f523751bf67b47bc873c70d73fc46625feea7b9a8
+EBUILD pidof-bsd-20050501-r4.ebuild 1057 RMD160 158279829440b3b43be64c4e1461f34e27c63c9c SHA1 edd60b726b5824024766eb2cca0c818982e95dec SHA256 e52d4bf4d0b22dc877aa2cd61d99bf8ad282d3a269392ecc8f4feac538e74042
+MISC ChangeLog 2104 RMD160 811780385d05e2583bbdc9214d3058ddbabb9b37 SHA1 65ab77d6f0f7561793f7bf1cba3a3b8038134880 SHA256 4aaa6a8eacbbf506884dfe0e272be7863da1fc7398052e02ccf07ea7961b1a29
 MISC metadata.xml 156 RMD160 60b5820a08275f307e5bd936d78f5afd1f141086 SHA1 d9d9d4f2b5afc58339ea3e562fca490156935f1f SHA256 30ab515d6ac492d3d6c36ac3c675511742c2149e56a6b3228c8d22ab8edb3ff7
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (SunOS)
+Version: GnuPG v2.0.19 (Darwin)
 
-iEYEARECAAYFAk/CGmMACgkQX3X2B8XHTolaLgCghW4ik6jCX8bNeA/EwoyIZOtN
-kLoAnA9SxfaUxL2bZxtTLK+SrYysnpPP
-=lH6T
+iEYEARECAAYFAk/DiQIACgkQX3X2B8XHTolxzACfeJiosndmiZB6VZldEtMgtLZa
+XjIAnAlhti9qOwnzcEWCnH643JE3pW40
+=MVWn
 -----END PGP SIGNATURE-----
